[tool.poetry]
name = "fasteth"
version = "0.1.0"
description = "A lightweight, python native, async interface for the Ethereum JSON RPC."
authors = ["0xAlcibiades <info@dontemail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
httpx = {extras = ["http2"], version = "^0.16.1"}
eth-typing = "^2.2.2"
eth-utils = "^1.10.0"
pydantic = "^1.8.1"
eth-hash = {extras = ["pycryptodome"], version = "^0.3.1"}
orjson = "^3.5.1"
eth-account = "^0.5.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
Pygments = "^2.8.0"
docutils = "^0.16"
pytest-asyncio = "^0.14.0"
async_generator = "^1.10"
coverage = "^5.4"
Cython = "^0.29.22"
Sphinx = "^3.5.1"
pytest-benchmark = "^3.2.3"
isort = "^5.7.0"
scalene = "^1.3.0"
mypy = "^0.812"
bpython = "^0.21"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
